Add modal when deleting and aproving quote

--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
             </a>
         </div>
         <div>
-            <a asp-controller="Quote" asp-action="Add" class="btn button btn-lg animate__animated animate__pulse">
+            <a asp-controller="Quote" asp-action="Upload" class="btn button btn-lg animate__animated animate__pulse">
                 Upload Quote
             </a>
         </div>
