--- a/Web/Bookworm.Web/Views/Quote/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Upload.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="modal-body d-flex justify-content-center">
                 <img class="col-4" src="@Model.MovieQuoteImgUrl" />
-                <form method="post" asp-controller="Quote" asp-action="AddMovieQuote" class="col-8 mx-auto d-flex justify-content-center flex-column ps-4">
+                <form method="post" asp-controller="Quote" asp-action="UploadMovieQuote" class="col-8 mx-auto d-flex justify-content-center flex-column ps-4">
                     <div class="form-group fs-4">
                         <label asp-for="@Model.MovieQuoteModel.Content">Content*</label>
                         <textarea asp-for="@Model.MovieQuoteModel.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
@@ -69,7 +69,7 @@
             </div>
             <div class="modal-body d-flex justify-content-center">
                 <img class="col-4" src="@Model.BookQuoteImgUrl" />
-                <form method="post" asp-controller="Quote" asp-action="AddBookQuote" class="col-8 mx-auto d-flex justify-content-center flex-column ps-4">
+                <form method="post" asp-controller="Quote" asp-action="UploadBookQuote" class="col-8 mx-auto d-flex justify-content-center flex-column ps-4">
                     <div class="form-group fs-4">
                         <label asp-for="@Model.BookQuoteModel.Content">Content*</label>
                         <textarea asp-for="@Model.BookQuoteModel.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
@@ -104,7 +104,7 @@
             </div>
             <div class="modal-body d-flex align-items-stretch">
                 <img class="col-4" src="@Model.GeneralQuoteImgUrl" />
-                <form method="post" asp-controller="Quote" asp-action="Add" class="col-8 mx-auto d-flex justify-content-center flex-column px-4">
+                <form method="post" asp-controller="Quote" asp-action="UploadGeneralQuote" class="col-8 mx-auto d-flex justify-content-center flex-column px-4">
                     <div class="form-group fs-4">
                         <label asp-for="GeneralQuoteModel.Content">Content*</label>
                         <textarea asp-for="GeneralQuoteModel.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
