--- a/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
@@ -6,39 +6,30 @@
 
 <h1 class="text-center mt-5">Users</h1>
 
-<div class="container-fluid">
-    <div class="card shadow mb-4">
-        <div class="card-body bg-dark text-light">
-            <div class="table-responsive ">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                    <thead>
-                        <tr>
-                            <th>Username</th>
-                            <th>Email</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var user in Model)
-                        {
-                            <tr>
-                                <td>@user.Username</td>
-                                <td>@user.Email</td>
-                                <td class="text-center">
-                                    <a asp-area="admin" asp-action="Edit" asp-controller="User" asp-route-id="@user.Id" class="btn btn-outline-info">Edit User</a>
-                                    <a asp-area="admin" asp-action="Roles" asp-controller="User" asp-route-userId="@user.Id" class="btn btn-outline-info">User Role</a>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
+<table class="table table-striped table-dark table-bordered" id="dataTable" width="100%" cellspacing="0">
+    <thead>
+        <tr>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var user in Model)
+        {
+            <tr>
+                <td class="align-middle">@user.Username</td>
+                <td class="align-middle">@user.Email</td>
+                <td class="text-center">
+                    <a asp-area="admin" asp-controller="User" asp-action="Edit" asp-route-id="@user.Id" class="btn btn-danger">Edit User</a>
+                    <a asp-area="admin" asp-controller="User" asp-action="Roles" asp-route-userId="@user.Id" class="btn btn-danger">User Role</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
 
-@section Scripts{
-    <script src="~/js/datatables-demo.js"></script>
-    <script src="~/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/js/jquery.dataTables.min.js"></script>
+@section Scripts {
+    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
+    <script src="~/js/datatable.js"></script>
 }
