--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -106,10 +106,10 @@ else
                             }
                         </td>
                         <td class="text-center align-middle">
-                            <a asp-area="" asp-action="Edit" asp-controller="Quote" asp-route-id="@Model.Quotes[i].Id" class="btn btn-outline-warning"><i class="fa-solid fa-pen-to-square fa-xl"></i></a>
+                            <a asp-area="" asp-controller="Quote" asp-action="Edit" asp-route-id="@Model.Quotes[i].Id" class="btn btn-outline-warning"><i class="fa-solid fa-pen-to-square fa-xl"></i></a>
                         </td>
                         <td class="text-center align-middle">
-                            <a asp-area="" asp-action="Delete" asp-controller="Quote" asp-route-id="@Model.Quotes[i].Id" class="btn btn-outline-danger"><i class="fa-solid fa-trash-can fa-xl"></i></a>
+                            <a class="btn btn-outline-danger deleteQuoteBtn" data-quote-id="@Model.Quotes[i].Id" data-bs-toggle="modal" data-bs-target="#deleteQuoteModal"><i class="fa-solid fa-trash-can fa-xl"></i></a>
                         </td>
                     </tr>
                 }
@@ -118,8 +118,27 @@ else
     </div>
 }
 
-
-
+<!-- Delete Quote Modal -->
+<div class="modal fade" id="deleteQuoteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete quote</h1>
+                <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this quote?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                <form method="post" asp-controller="Quote" asp-action="Delete">
+                    <input type="hidden" name="quoteId" id="deleteQuoteId" value="" />
+                    <button type="submit" id="confirmDeleteQuoteBtn" class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts{
     <script type="module" src="~/js/quotes/userQuotes.js" charset="UTF-8"></script>
