--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -6,14 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Admin - Bookworm</title>
-
-    <!-- Custom fonts for this template-->
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="~/css/dataTables.bootstrap4.min.css" rel="stylesheet" asp-append-version="true">
-    <!-- Custom styles for this template-->
+    <link href="~/lib/bootstrap/css/bootstrap.min.css">
     <link href="~/css/sb-admin-2.css" rel="stylesheet" asp-append-version="true">
 </head>
 
@@ -54,8 +49,14 @@
             </li>
 
             <li class="nav-item active">
-                <a asp-area="admin" asp-controller="Quote" asp-action="AllQuotes" class="nav-link">
-                    <i class="fas fa-pen icon"></i><span>Manage Quotes</span>
+                <a asp-area="admin" asp-controller="Quote" asp-action="UnapprovedQuotes" class="nav-link">
+                    <i class="fas fa-pen icon"></i><span>Manage Unapproved Quotes</span>
+                </a>
+            </li>
+
+            <li class="nav-item active">
+                <a asp-area="admin" asp-controller="Quote" asp-action="DeletedQuotes" class="nav-link">
+                    <i class="fas fa-pen icon"></i><span>Manage Deleted Quotes</span>
                 </a>
             </li>
 
@@ -72,10 +73,7 @@
             <!-- Main Content -->
             <div id="content">
 
-                <!-- Topbar -->
-                @*<nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                </nav>*@
-                <!-- End of Topbar -->
+
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
                     <div class="container">
@@ -87,7 +85,6 @@
                 </div>
             </div>
         </div>
-        <!-- /.container-fluid -->
 
     </div>
     <!-- End of Main Content -->
@@ -121,8 +118,9 @@
     </div>
 
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/sb-admin-2.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+    <script src="~/js/sb-admin-2.min.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     @await this.RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
