--- a/Web/Bookworm.Web/wwwroot/css/sb-admin-2.css
+++ b/Web/Bookworm.Web/wwwroot/css/sb-admin-2.css
@@ -1,15 +1,6 @@
-/*!
- * Start Bootstrap - SB Admin 2 v4.1.3 (https://startbootstrap.com/theme/sb-admin-2)
- * Copyright 2013-2021 Start Bootstrap
- * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-sb-admin-2/blob/master/LICENSE)
- */
 
-/*!
- * Bootstrap v4.6.0 (https://getbootstrap.com/)
- * Copyright 2011-2021 The Bootstrap Authors
- * Copyright 2011-2021 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
+@import url("https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i");
+@import url("https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css");
 :root {
     --blue: #4e73df;
     --indigo: #6610f2;
@@ -388,6 +379,12 @@ h5, .h5 {
 
 h6, .h6 {
     font-size: 1rem;
+}
+
+.modal .modal-header .btn-modal-close {
+    color: red;
+    border: solid 2px red;
+    background: none;
 }
 
 .lead {
