--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,73 +5,68 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="card loginRegisterFormContainer border-1 border-black">
-    <div class="d-flex justify-content-center">
-        <div class="col-md-5 imageContainer">
-            <img src="@Model.LoginPictureUrl" class="img-fluid rounded-start img-login h-100" alt="Books Image...">
+<div class="loginRegisterContainer my-5">
+    <img src="@Model.LoginPictureUrl" class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster" alt="Books Image..." />
+    <div class="loginRegisterForm animate__animated animate__fadeInRight animate__faster">
+        <h5 class="card-title text-center fs-3">Log in to your Account</h5>
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+            <div class="divider-custom-line"></div>
         </div>
-        <div class="col-md-7 loginRegisterForm">
-            <div class="card-body">
-                <h5 class="card-title text-center fs-3">Log in to your Account</h5>
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
+        <form id="account" method="post">
+            <div class="form-floating">
+                <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username">
+                <label asp-for="Input.UserName"></label>
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input type="email" asp-for="Input.Email" class="form-control border border-2 mt-3" placeholder="name@example.com" />
+                <label asp-for="Input.Email"></label>
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input type="password" asp-for="Input.Password" class="form-control border border-2 mt-3" placeholder="Password" />
+                <label asp-for="Input.Password"></label>
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            </div>
+            <div class="form-group my-3">
+                <div class="checkbox">
+                    <label asp-for="Input.RememberMe" class="d-flex align-items-center gap-3">
+                        <input asp-for="Input.RememberMe" />
+                        @Html.DisplayNameFor(m => m.Input.RememberMe)
+                    </label>
                 </div>
-                <form id="account" method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-floating">
-                        <input asp-for="Input.UserName" class="form-control" placeholder="username">
-                        <label asp-for="Input.UserName"></label>
-                        <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn button btn-lg">Login</button>
+            </div>
+        </form>
+        <div class="mt-3">
+            @{
+                if ((Model.ExternalLogins?.Count ?? 0) != 0)
+                {
+                    <div class="text-center">
+                        <span class="fs-5">Or use another service to log in:</span>
                     </div>
-                    <div class="form-floating">
-                        <input type="email" asp-for="Input.Email" class="form-control my-3" placeholder="name@example.com" />
-                        <label asp-for="Input.Email"></label>
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating">
-                        <input type="password" asp-for="Input.Password" class="form-control my-3" placeholder="Password" />
-                        <label asp-for="Input.Password"></label>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <div class="checkbox">
-                            <label asp-for="Input.RememberMe">
-                                <input asp-for="Input.RememberMe" />
-                                @Html.DisplayNameFor(m => m.Input.RememberMe)
-                            </label>
-                        </div>
-                    </div>
-                    <div class="text-center mt-4">
-                        <button type="submit" class="btn button">Login</button>
-                    </div>
-                </form>
-                @{
-                    if ((Model.ExternalLogins?.Count ?? 0) != 0)
-                    {
-                        <div class="text-center my-3">
-                            <span>Or use another service to log in:</span>
-                        </div>
-                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                            @foreach (var provider in Model.ExternalLogins)
-                            {
-                                <div class="text-center">
-                                    <button type="submit" class="btn button mb-3" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName<i class="fab fa-facebook ms-1"></i></button>
-                                </div>
-                            }
-                        </form>
-                    }
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                        @foreach (var provider in Model.ExternalLogins)
+                        {
+                            <div class="text-center">
+                                <button type="submit" class="btn button btn-lg my-3" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName<i class="fab fa-facebook ms-1"></i></button>
+                            </div>
+                        }
+                    </form>
                 }
-                <div class="text-center">
-                    <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
-                </div>
-                <div class="text-center">
-                    <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                </div>
-                <div class="text-center">
-                    <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Resend email confirmation</a>
-                </div>
+            }
+            <div class="text-center">
+                <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
+            </div>
+            <div class="text-center">
+                <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+            </div>
+            <div class="text-center">
+                <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Resend email confirmation</a>
             </div>
         </div>
     </div>
