--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,53 +4,46 @@
     ViewData["Title"] = "Register";
 }
 
-
-<div class="card loginRegisterFormContainer border-1 border-black">
-    <div class="d-flex justify-content-center">
-        <div class="col-md-5 imageContainer">
-            <img src="@Model.RegisterPictureUrl" class="img-fluid rounded-start img-login h-100" alt="Books Image...">
+<div class="loginRegisterContainer my-5">
+    <img src="@Model.RegisterPictureUrl" class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster" alt="Books Image...">
+    <div class="loginRegisterForm animate__animated animate__fadeInRight animate__faster">
+        <h5 class="card-title text-center fs-3">Create an Account</h5>
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+            <div class="divider-custom-line"></div>
         </div>
-        <div class="col-md-7 loginRegisterForm">
-            <div class="card-body">
-                <h5 class="card-title text-center fs-3">Create an Account</h5>
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-floating">
-                        <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username" />
-                        <label asp-for="Input.UserName"></label>
-                        <span asp-validation-for="Input.UserName" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating">
-                        <input asp-for="Input.Email" class="form-control my-3 border border-2" placeholder="name@example.com" />
-                        <label asp-for="Input.Email"></label>
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating">
-                        <input asp-for="Input.Password" class="form-control mb-3 border border-2" placeholder="password" />
-                        <label asp-for="Input.Password"></label>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating">
-                        <input asp-for="Input.ConfirmPassword" class="form-control border border-2" placeholder="confirm password" />
-                        <label asp-for="Input.ConfirmPassword"></label>
-                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                    </div>
-                    <div class="form-group text-center my-4">
-                        <button type="submit" class="btn button">Register</button>
-                    </div>
-                </form>
-                <div class="text-center">
-                    <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
-                </div>
-                <div class="text-center">
-                    <a class="form-link" asp-page="./Login">Already have an account? Login!</a>
-                </div>
+        <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
+            <div class="form-floating">
+                <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username" />
+                <label asp-for="Input.UserName"></label>
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
             </div>
+            <div class="form-floating">
+                <input asp-for="Input.Email" class="form-control border border-2 mt-3" placeholder="name@example.com" />
+                <label asp-for="Input.Email"></label>
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.Password" class="form-control border border-2 mt-3" placeholder="password" />
+                <label asp-for="Input.Password"></label>
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.ConfirmPassword" class="form-control border border-2 mt-3" placeholder="confirm password" />
+                <label asp-for="Input.ConfirmPassword"></label>
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group text-center my-4">
+                <button type="submit" class="btn button btn-lg">Register</button>
+            </div>
+
+        </form>
+        <div class="text-center">
+            <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
+        </div>
+        <div class="text-center">
+            <a class="form-link" asp-page="./Login">Already have an account? Login!</a>
         </div>
     </div>
 </div>
