Add Manage Approved Quotes page in admin area

--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -49,6 +49,12 @@
             </li>
 
             <li class="nav-item active">
+                <a asp-area="admin" asp-controller="Quote" asp-action="ApprovedQuotes" class="nav-link">
+                    <i class="fas fa-pen icon"></i><span>Manage Approved Quotes</span>
+                </a>
+            </li>
+
+            <li class="nav-item active">
                 <a asp-area="admin" asp-controller="Quote" asp-action="UnapprovedQuotes" class="nav-link">
                     <i class="fas fa-pen icon"></i><span>Manage Unapproved Quotes</span>
                 </a>
