--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -15,6 +15,7 @@
             <div class="divider-custom-line"></div>
         </div>
         <form id="account" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-floating">
                 <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username">
                 <label asp-for="Input.UserName"></label>
