--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -14,6 +14,7 @@
             <div class="divider-custom-line"></div>
         </div>
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-floating">
                 <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username" />
                 <label asp-for="Input.UserName"></label>
