--- a/Web/Bookworm.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_LoginPartial.cshtml
@@ -7,22 +7,13 @@
 
 @if (this.SignInManager.IsSignedIn(this.User))
 {
-    var user = this.UserManager.GetUserAsync(this.User);
-    var favoriteBooksCount = user.Result.FavoriteBooks.Count();
-    var points = user.Result.Points;
+    ApplicationUser user = await this.UserManager.GetUserAsync(this.User);
 
     <li class="nav-item dropdown mx-2">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            @user.Result.UserName
+            @user.UserName
         </a>
         <ul class="dropdown-menu animate__animated animate__fadeIn animate__faster fs-5">
-            <li>
-                <a class="dropdown-item py-3">
-                    <i class="fas fa-graduation-cap"></i>
-                    Points: @points
-                </a>
-            </li>
-
             @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
             {
                 <li>
@@ -71,4 +62,3 @@ else
         <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
 }
-
