--- a/Web/Bookworm.Web/Views/Quote/All.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/All.cshtml
@@ -13,8 +13,7 @@
     </div>
 </div>
 
-
-<div class="btn-group mt-5 d-flex justify-content-center" role="group" aria-label="Basic radio toggle button group">
+<div class="btn-group mb-3 d-flex justify-content-center" role="group" aria-label="Basic radio toggle button group">
     <input type="radio" class="btn-check" name="btnradio" id="movieQuotesRadio" autocomplete="off">
     <label class="btn border border-2" for="movieQuotesRadio">Show only movie quotes</label>
 
@@ -28,12 +27,13 @@
     <label class="btn border border-2" for="likedQuotesRadio">Show only liked quotes</label>
 </div>
 
-<div class="input-group my-5">
+<div class="input-group mb-3">
     <input type="text" class="form-control border border-2 border-black" id="searchQuotesInput" placeholder="Search quotes..." aria-label="Recipient's username" aria-describedby="button-addon2">
     <button class="btn border border-2 border-black" type="button" id="searchQuotesBtn"><i class="fa-solid fa-magnifying-glass fa-xl"></i></button>
 </div>
 
-<div class="table-responsive my-5">
+
+<div class="table-responsive mb-3">
     <table class="table table-bordered">
         <thead>
             <tr>
