--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -19,16 +19,15 @@
 }
 else
 {
-    <h4 class="text-center mt-5 mb-3">Filter quotes by visibility:</h4>
-    <div class="btn-group d-flex justify-content-center" role="group" aria-label="Basic radio toggle button group">
+    <div class="btn-group d-flex justify-content-center mb-3" role="group" aria-label="Basic radio toggle button group">
         <input type="radio" class="btn-check" name="btnradio" id="approvedQuotesRadio" autocomplete="off">
         <label class="btn border border-2" for="approvedQuotesRadio">Show only approved quotes - @Model.ApprovedQuotesCount</label>
 
         <input type="radio" class="btn-check" name="btnradio" id="unapprovedQuotesRadio" autocomplete="off">
         <label class="btn border border-2" for="unapprovedQuotesRadio">Show only unapproved quotes - @Model.UnapprovedQuotesCount</label>
     </div>
-    <h4 class="text-center mt-3 mb-3">Filter quotes by type:</h4>
-    <div class="btn-group d-flex justify-content-center" role="group" aria-label="Basic radio toggle button group">
+
+    <div class="btn-group d-flex justify-content-center mb-3" role="group" aria-label="Basic radio toggle button group">
         <input type="radio" class="btn-check" name="btnradio" id="movieQuotesRadio" autocomplete="off">
         <label class="btn border border-2" for="movieQuotesRadio">Show only movie quotes</label>
 
@@ -38,18 +37,18 @@ else
         <input type="radio" class="btn-check" name="btnradio" id="generalQuotesRadio" autocomplete="off">
         <label class="btn border border-2" for="generalQuotesRadio">Show only general quotes</label>
     </div>
-    <h4 class="text-center mt-3 mb-3">Filter quotes by likes:</h4>
-    <div class="btn-group d-flex justify-content-center" role="group" aria-label="Basic radio toggle button group">
+
+    <div class="btn-group d-flex justify-content-center mb-3" role="group" aria-label="Basic radio toggle button group">
         <input type="radio" class="btn-check" name="btnradio" id="likedQuotesRadio" autocomplete="off">
         <label class="btn border border-2" for="likedQuotesRadio">Show only liked quotes</label>
     </div>
 
-    <div class="input-group my-5">
+    <div class="input-group">
         <input type="text" class="form-control border border-2 border-black" id="searchQuotesInput" placeholder="Search quotes..." aria-label="Recipient's username" aria-describedby="button-addon2">
         <button class="btn border border-2 border-black" type="button" id="searchQuotesBtn"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
 
-    <div class="table-responsive my-5">
+    <div class="table-responsive my-3">
         <table class="table table-bordered">
             <thead>
                 <tr>
