Suppress StyleCol rule SA1649

--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link" aria-current="page" asp-area="" asp-controller="Category" asp-action="All">Categories</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" asp-area="" asp-controller="Quote" asp-action="All">Quotes</a>
+                            <a class="nav-link" asp-controller="Quote" asp-area="" asp-action="All">Quotes</a>
                         </li>
                         <li class="nav-item mx-2">
                             <a class="nav-link" asp-area="" asp-controller="Book" asp-action="Random">Random Book</a>
