--- a/Web/Bookworm.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_LoginPartial.cshtml
@@ -28,22 +28,22 @@
                 </a>
             </li>
             <li>
-                <a class="dropdown-item py-3" asp-area="" asp-action="Favorites" asp-controller="FavoriteBook">
+                <a class="dropdown-item py-3" asp-area="" asp-controller="FavoriteBook" asp-action="Favorites">
                     <i class="fas fa-heart me-2"></i>Favorite Books
                 </a>
             </li>
             <li>
-                <a class="dropdown-item py-3" asp-area="" asp-action="UserBooks" asp-controller="Book">
+                <a class="dropdown-item py-3" asp-area="" asp-controller="Book" asp-action="UserBooks">
                     <i class="fas fa-book me-2"></i>My Books
                 </a>
             </li>
             <li>
-                <a class="dropdown-item py-3" asp-area="" asp-action="UserQuotes" asp-controller="Quote">
+                <a class="dropdown-item py-3" asp-area="" asp-controller="Quote" asp-action="UserQuotes">
                     <i class="fas fa-pen me-2"></i>My Quotes
                 </a>
             </li>
             <li>
-                <a class="dropdown-item py-3" asp-area="" asp-action="Statistics" asp-controller="User">
+                <a class="dropdown-item py-3" asp-area="" asp-controller="User" asp-action="Statistics">
                     <i class="fas fa-user-graduate me-2"></i>Users Statistics
                 </a>
             </li>
