--- a/Web/Bookworm.Web/Views/User/Statistics.cshtml
+++ b/Web/Bookworm.Web/Views/User/Statistics.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 
-<table class="table table-bordered animate__animated animate__zoomIn">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th scope="col">#</th>
