--- a/Web/Bookworm.Web/Areas/Admin/Views/Quote/DeletedQuotes.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Quote/DeletedQuotes.cshtml
@@ -54,7 +54,7 @@ else
                             <td class="text-center align-middle"><i class="fa-solid fa-minus fa-xl"></i></td>
                         }
                         <td class="text-center align-middle">
-                            <button class="btn btn-danger undeleteQuoteBtn" data-quote-id="@Model.Quotes[i].Id" data-bs-toggle="modal" data-bs-target="#undeleteQuoteModal"><i class="fa-solid fa-trash-can-arrow-up fa-xl px-2"></i></button>
+                            <button class="btn btn-danger quoteBtn" data-quote-id="@Model.Quotes[i].Id" data-bs-toggle="modal" data-bs-target="#undeleteQuoteModal"><i class="fa-solid fa-trash-can-arrow-up fa-xl px-2"></i></button>
                         </td>
                     </tr>
                 }
@@ -77,8 +77,8 @@ else
             <div class="modal-footer">
                 <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
                 <form method="post" asp-area="admin" asp-controller="Quote" asp-action="Undelete">
-                    <input type="hidden" name="quoteId" id="undeleteQuoteId" value="" />
-                    <button type="submit" id="confirmDeleteQuoteBtn" class="btn btn-danger">Undelete</button>
+                    <input type="hidden" name="quoteId" class="quoteIdInput" value="" />
+                    <button type="submit" class="btn btn-danger">Undelete</button>
                 </form>
             </div>
         </div>
@@ -86,17 +86,7 @@ else
 </div>
 
 @section Scripts{
-    <script>
-        const undeleteQuoteBtns = document.querySelectorAll('.undeleteQuoteBtn');
-        const undeleteQuoteIdInput = document.getElementById('undeleteQuoteId');
-
-        undeleteQuoteBtns.forEach(button => {
-            button.addEventListener('click', function () {
-                const quoteId = this.getAttribute('data-quote-id');
-                undeleteQuoteIdInput.value = quoteId;
-            });
-        });
-    </script>
+    <script src="~/js/quotes/quoteAdminModal.js"></script>
     <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
     <script src="~/js/datatable.js"></script>
 }
