--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -83,7 +83,7 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
                     <div class="container">
-                        <partial name="_CookieConsentPartial" />
+                        <partial name="PartialViews/_CookieConsentPartial" />
                         <main role="main">
                             @this.RenderBody()
                         </main>
