--- a/Web/Bookworm.Web/Areas/Admin/Views/Quote/ApprovedQuotes.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Quote/ApprovedQuotes.cshtml
@@ -86,7 +86,7 @@ else
 </div>
 
 @section Scripts{
-    <script src="~/js/quotes/quoteAdminModal.js"></script>
+    <script src="~/js/quotes/quoteModal.js"></script>
     <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
     <script src="~/js/datatable.js"></script>
 }
