--- a/Web/Bookworm.Web/Views/Book/Random.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Random.cshtml
@@ -15,7 +15,12 @@
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group fs-4 mt-4">
         <label asp-for="CategoryName">Select Category</label>
-        <select asp-for="CategoryName" asp-items="@Model.Categories" size="8" aria-label="size 5 select example" class="form-select form-control border border-2 fs-5"></select>
+        <select asp-for="CategoryName" size="8" aria-label="size 5 select example" class="form-select form-control border border-2 fs-5">
+            @foreach (var category in Model.Categories)
+            {
+                <option value=@category.Id>@category.Name</option>
+            }
+        </select>
     </div>
     <div class="form-group mt-4">
         <label class="fs-4" asp-for="@Model.CountBooks">Select Number of books:</label>
