--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -13,7 +13,6 @@
 </div>
 
 <form method="post" class="col-8 mx-auto d-flex justify-content-center flex-column" enctype="multipart/form-data">
-    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group fs-4">
         <label asp-for="Title">Title</label>
         <input asp-for="Title" type="text" class="form-control border border-2">
@@ -21,7 +20,12 @@
     </div>
     <div class="form-group mt-4 fs-4">
         <label asp-for="LanguageId">Select Language</label>
-        <select asp-for="LanguageId" asp-items="@Model.Languages" size="8" aria-label="size 5 select example" class="fs-5 form-select form-control border border-2"></select>
+        <select asp-for="LanguageId" size="8" aria-label="size 5 select example" class="fs-5 form-select form-control border border-2">
+            @foreach (var language in Model.Languages)
+            {
+                <option value=@language.Id>@language.Name</option>
+            }
+        </select>
     </div>
     <div class="form-group mt-4 fs-4">
         <label asp-for="PagesCount">Number of Pages</label>
@@ -30,7 +34,12 @@
     </div>
     <div class="form-group mt-4 fs-4">
         <label asp-for="CategoryId">Select Category</label>
-        <select asp-for="CategoryId" asp-items="@Model.Categories" size="8" aria-label="size 5 select example" class="fs-5 form-select form-control border border-2"></select>
+        <select asp-for="CategoryId" size="8" aria-label="size 5 select example" class="fs-5 form-select form-control border border-2">
+            @foreach (var category in Model.Categories)
+            {
+                <option value=@category.Id>@category.Name</option>
+            }
+        </select>
     </div>
     <div class="form-group mt-4 fs-4">
         <label asp-for="PublishedYear">Year</label>
@@ -50,12 +59,10 @@
         <label asp-for="ImageFile" class="form-label fs-4">Image File</label>
         <input asp-for="ImageFile" type="file" class="form-control border border-2">
     </div>
-
     <div class="form-group mt-4" id="authorsContainer">
         <div id="alert-message"></div>
         <button type="button" id="addAuthorBtn" class="btn button fs-5" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="You can add 5 authors" onclick="AddAuthor();">Add Author<i class="fa-solid fa-square-plus ms-2 fa-xl"></i></button>
     </div>
-
     <div class="form-group mt-4 fs-4">
         <label asp-for="Description">Description</label>
         <textarea asp-for="Description" class="form-control border border-2" rows="12"></textarea>
@@ -65,8 +72,6 @@
         <button type="submit" class="btn button fs-5"><strong>Upload Book<i class="fas fa-upload icon ms-2"></i></strong></button>
     </div>
 </form>
-
-
 
 @section Scripts{
     <script src="~/js/authors.js"></script>
