--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,11 +7,10 @@
 }
 
 <div class="loginRegisterContainer my-5">
-    <img src="@Model.LoginPictureUrl" class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster" alt="Books Image..." />
+    <img src=@Model.LoginPictureUrl class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster" alt="Books Image..." />
     <div class="loginRegisterForm animate__animated animate__fadeInRight animate__faster">
         <partial name="PartialViews/_CustomDivider" />
         <form id="account" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-floating">
                 <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username">
                 <label asp-for="Input.UserName"></label>
