--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -1,4 +1,4 @@
-﻿@model UploadBookFormModel
+﻿@model UploadBookViewModel
 
 @{
     this.ViewData["Title"] = "Upload Book";
@@ -12,59 +12,58 @@
     </div>
 </div>
 
-<form method="post" class="col-8 mx-auto d-flex justify-content-center flex-column" enctype="multipart/form-data">
-    <div class="form-group fs-4">
-        <label asp-for="Title">Title</label>
+<form method="post" enctype="multipart/form-data" class="col-8 mx-auto d-flex justify-content-center flex-column">
+    <div asp-validation-summary="All" class="small text-danger mt-3 fs-4"></div>
+    <div class="fs-4">
+        <label asp-for="Title"></label>
         <input asp-for="Title" type="text" class="form-control border border-2">
         <span asp-validation-for="Title" class="small text-danger"></span>
     </div>
-    <div class="form-group mt-4 fs-4">
-        <label asp-for="LanguageId">Select Language</label>
-        <select asp-for="LanguageId" size="8" aria-label="size 5 select example" class="fs-5 form-select form-control border border-2">
-            @foreach (var language in Model.Languages)
-            {
-                <option value=@language.Id>@language.Name</option>
-            }
+    <div class="mt-4 fs-4">
+        <label asp-for="LanguageId"></label>
+        <select asp-for="LanguageId" size="8" aria-label="size 5 select example" class="fs-5 form-select border border-2">
+            <vc:languages></vc:languages>
         </select>
+        <span asp-validation-for="LanguageId" class="small text-danger"></span>
     </div>
-    <div class="form-group mt-4 fs-4">
-        <label asp-for="PagesCount">Number of Pages</label>
-        <input asp-for="PagesCount" type="number" min="5" class="form-control border border-2">
+    <div class="mt-4 fs-4">
+        <label asp-for="PagesCount"></label>
+        <input asp-for="PagesCount" type="number" class="form-control border border-2">
         <span asp-validation-for="PagesCount" class="small text-danger"></span>
     </div>
-    <div class="form-group mt-4 fs-4">
-        <label asp-for="CategoryId">Select Category</label>
-        <select asp-for="CategoryId" size="8" aria-label="size 5 select example" class="fs-5 form-select form-control border border-2">
-            @foreach (var category in Model.Categories)
-            {
-                <option value=@category.Id>@category.Name</option>
-            }
+    <div class="mt-4 fs-4">
+        <label asp-for="CategoryId"></label>
+        <select asp-for="CategoryId" size="8" aria-label="size 5 select example" class="fs-5 form-select border border-2">
+            <vc:categories></vc:categories>
         </select>
+        <span asp-validation-for="CategoryId" class="small text-danger"></span>
     </div>
-    <div class="form-group mt-4 fs-4">
-        <label asp-for="PublishedYear">Year</label>
+    <div class="mt-4 fs-4">
+        <label asp-for="PublishedYear"></label>
         <input asp-for="PublishedYear" type="number" class="form-control border border-2">
         <span asp-validation-for="PublishedYear" class="small text-danger"></span>
     </div>
-    <div class="form-group mt-4 fs-4">
-        <label asp-for="Publisher">Publisher(optional)</label>
+    <div class="mt-4 fs-4">
+        <label asp-for="Publisher"></label>
         <input asp-for="Publisher" type="text" class="form-control border border-2">
         <span asp-validation-for="Publisher" class="small text-danger"></span>
     </div>
-    <div class="form-group mt-4">
-        <label asp-for="BookFile" class="form-label fs-4">Book File - Max 50 MB</label>
+    <div class="mt-4 fs-4">
+        <label asp-for="BookFile" class="form-label"></label>
         <input asp-for="BookFile" type="file" class="form-control border border-2">
+        <span asp-validation-for="BookFile" class="small text-danger"></span>
     </div>
-    <div class="form-group mt-4">
-        <label asp-for="ImageFile" class="form-label fs-4">Image File</label>
+    <div class="mt-4 fs-4">
+        <label asp-for="ImageFile" class="form-label"></label>
         <input asp-for="ImageFile" type="file" class="form-control border border-2">
+        <span asp-validation-for="ImageFile" class="small text-danger"></span>
     </div>
-    <div class="form-group mt-4" id="authorsContainer">
+    <div class="mt-4" id="authorsContainer" data-index="0">
         <div id="alert-message"></div>
-        <button type="button" id="addAuthorBtn" class="btn button fs-5" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="You can add 5 authors" onclick="AddAuthor();">Add Author<i class="fa-solid fa-square-plus ms-2 fa-xl"></i></button>
+        <button type="button" id="addAuthorBtn" class="btn button fs-5">Add Author<i class="fa-solid fa-square-plus ms-2 fa-xl"></i></button>
     </div>
-    <div class="form-group mt-4 fs-4">
-        <label asp-for="Description">Description</label>
+    <div class="mt-4 fs-4">
+        <label asp-for="Description"></label>
         <textarea asp-for="Description" class="form-control border border-2" rows="12"></textarea>
         <span asp-validation-for="Description" class="small text-danger"></span>
     </div>
