--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using Bookworm.Web.ViewModels
 @using Bookworm.Web.ViewModels.Quotes
 @using Bookworm.Web.ViewModels.Categories
+@using Bookworm.Web.ViewModels.Languages
 @using Bookworm.Web.ViewModels.Books
 @using Bookworm.Web.ViewModels.Comments
 @using Bookworm.Web.ViewModels.Users
