--- a/Web/Bookworm.Web/Views/Book/Random.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Random.cshtml
@@ -2,24 +2,17 @@
 
 @{
     this.ViewData["Title"] = "Random Book Generator";
+    this.ViewData["Icon-Class"] = "fa-cog";
 }
-<div class="d-flex justify-content-center mt-5">
-    <div class="card text-center title-card animate__animated animate__jackInTheBox">
-        <div class="card-body">
-            <h3>@this.ViewData["Title"]<i class="fas fa-cog icon ms-3"></i></h3>
-        </div>
-    </div>
-</div>
+
+<partial name="PartialViews/_TitleCardPartial" />
 
 <form method="post" asp-controller="Book" asp-action="Random" class="col-8 mx-auto d-flex justify-content-center flex-column">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group fs-4 mt-4">
         <label asp-for="CategoryName">Select Category</label>
         <select asp-for="CategoryName" size="8" aria-label="size 5 select example" class="form-select form-control border border-2 fs-5">
-            @foreach (var category in Model.Categories)
-            {
-                <option value=@category.Id>@category.Name</option>
-            }
+            <vc:categories></vc:categories>
         </select>
     </div>
     <div class="form-group mt-4">
