--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -1,17 +1,11 @@
 ﻿@model UserQuotesViewModel
 
 @{
-    ViewData["Title"] = "My Quotes";
+    this.ViewData["Title"] = "My Quotes";
+    this.ViewData["Count"] = @Model.Quotes.Count;
 }
 
-<div class="d-flex justify-content-center my-5">
-    <div class="card title-card animate__animated animate__jackInTheBox">
-        <div class="card-body">
-            <h3>@this.ViewData["Title"] (@Model.Quotes.Count)</h3>
-        </div>
-    </div>
-</div>
-
+<partial name="PartialViews/_TitleCardPartial" />
 
 @if (Model.Quotes.Count() == 0)
 {
@@ -19,7 +13,7 @@
 }
 else
 {
-    <div class="btn-group d-flex justify-content-center mb-3" role="group" aria-label="Basic radio toggle button group">
+    <div class="btn-group d-flex justify-content-center my-5 mb-3" role="group" aria-label="Basic radio toggle button group">
         <input type="radio" class="btn-check" name="btnradio" id="approvedQuotesRadio" autocomplete="off">
         <label class="btn border border-2" for="approvedQuotesRadio">Show only approved quotes - @Model.ApprovedQuotesCount</label>
 
